load("@io_bazel_rules_go//go/private:rules/stdlib.bzl", "dist_stdlib")

package(default_visibility = [ "//visibility:public" ])

filegroup(
  name = "files",
  srcs = glob([
    "bin/go*",
    "src/**",
    "pkg/**",
  ]),
)

filegroup(
  name = "tools",
  srcs = select({
    "@io_bazel_rules_go//go/platform:darwin_amd64": ["@local_config_cc//:cc_wrapper"],
    "//conditions:default": None,
  }),
)

dist_stdlib(
    name = "linux_amd64",
    root = ":ROOT",
    headers = glob(["pkg/include/**/*.h"]),
    libs = glob(["pkg/linux_amd64/**/*.a"]),
    tools = glob(["pkg/tool/**"]),
    goos = "linux",
    goarch = "amd64",
)

DIST_STDLIBS = [
    "@go_sdk//:linux_amd64",
]

exports_files(["packages.txt"])
