load("@io_bazel_rules_go//go/private:rules/stdlib.bzl", "sdk_stdlib")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "headers",
    srcs = glob(["pkg/include/**/*.h"]),
)

filegroup(
    name = "tools",
    srcs = glob(["pkg/tool/**"]),
)

{stdlibs}

exports_files(["ROOT", "packages.txt"])
