load("@io_bazel_rules_go//go:def.bzl", "go_sdk")
load("@io_bazel_rules_go//go/toolchain:toolchains.bzl", "declare_toolchains")
load("@io_bazel_rules_go//go/private:rules/sdk.bzl", "package_list")
load(":globs.bzl", "HEADERS", "LIBS", "SRCS", "TOOLS")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "libs",
    srcs = LIBS,
)

filegroup(
    name = "headers",
    srcs = HEADERS,
)

filegroup(
    name = "srcs",
    srcs = SRCS,
)

filegroup(
    name = "tools",
    srcs = TOOLS,
)

go_sdk(
    name = "go_sdk",
    goos = "{goos}",
    goarch = "{goarch}",
    root_file = "ROOT",
    package_list = ":package_list",
    libs = [":libs"],
    headers = [":headers"],
    srcs = [":srcs"],
    tools = [":tools"],
    go = "bin/go{exe}",
)

# TODO(jayconrod): Gazelle depends on this file directly. This dependency
# should be broken, and this rule should be folded into go_sdk.
package_list(
    name = "package_list",
    srcs = [":srcs"],
    root_file = "ROOT",
    out = "packages.txt",
)

declare_toolchains(
    host = "{goos}_{goarch}",
    sdk = ":go_sdk",
)

filegroup(
    name = "files",
    srcs = [
        ":headers",
        ":libs",
        ":srcs",
        ":tools",
        "bin/go{exe}",
    ],
)
