load("@io_bazel_rules_go//go:def.bzl", "go_path", "go_test")

test_suite(name = "go_path")

[go_path(
    name = mode + "_path",
    deps = [
        "//tests/core/go_path/cmd/bin",
        "//tests/core/go_path/pkg/lib:go_default_library",
        "//tests/core/go_path/pkg/lib:embed_test",
        "//tests/core/go_path/pkg/lib:go_default_test",
        "//tests/core/go_path/pkg/lib:vendored",
    ],
    data = ["extra.txt"],
    mode = mode,
    testonly = True,
) for mode in ("copy", "archive")]

go_test(
    name = "go_default_test",
    srcs = ["go_path_test.go"],
    args = [
        "-copy_path=$(location :copy_path)",
        # TODO: other tests
    ],
    data = [":copy_path"],
    rundir = ".",
)
